--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.3.4",
     "react-native-pager-view": "6.0.1",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "expo-location": "~15.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
